feat(shoppingcart): view shopping cart items
