# shopping-api/src/main/java/be/jsilkens/devbooks/shopping/api/mapper/CartApiMapper.java
@@ -1,8 +1,6 @@
 package be.jsilkens.devbooks.shopping.api.mapper;
 
-import be.jsilkens.devbooks.shopping.api.model.CartItemResponseDTO;
-import be.jsilkens.devbooks.shopping.api.model.Price;
-import be.jsilkens.devbooks.shopping.api.model.ShoppingCartResponseDTO;
+import be.jsilkens.devbooks.shopping.api.model.*;
 import be.jsilkens.devbooks.shopping.domain.CartItem;
 import be.jsilkens.devbooks.shopping.domain.ShoppingCart;
 import lombok.AccessLevel;
@@ -18,13 +16,34 @@ public class CartApiMapper {
     public static ShoppingCartResponseDTO map(ShoppingCart cart) {
         var responseDTO = new ShoppingCartResponseDTO();
         responseDTO.setBooks(cart.getItems().stream()
-                .map(CartApiMapper::map)
+                .map(CartApiMapper::mapToOldCartItemResponseDTO)
                 .toList());
         responseDTO.setTotalPrice(mapPrice(cart.getTotalPrice().amount(), cart.getTotalPrice().currency().name()));
         return responseDTO;
     }
 
-    public static CartItemResponseDTO map(CartItem item) {
+    public static ViewCartResponseDTO mapToViewCartResponseDTO(ShoppingCart cart) {
+        return ViewCartResponseDTO.builder()
+                .books(cart.getItems().stream()
+                        .map(CartApiMapper::mapToViewCartItemResponseDTO)
+                        .toList())
+                .totalPrice(cart.getTotalPrice().amount().setScale(2, RoundingMode.HALF_UP))
+                .build();
+    }
+
+    private static ViewCartItemResponseDTO mapToViewCartItemResponseDTO(CartItem item) {
+        return ViewCartItemResponseDTO.builder()
+                .title(item.getBook().getTitle())
+                .priceInEur(item.getBook().getPrice().amount().setScale(2, RoundingMode.HALF_UP))
+                .quantity(item.getQuantity())
+                .detailsLink(ServletUriComponentsBuilder.fromCurrentContextPath()
+                        .path("/api/book/")
+                        .path(item.getBook().getIsbn().value())
+                        .toUriString())
+                .build();
+    }
+
+    public static CartItemResponseDTO mapToOldCartItemResponseDTO(CartItem item) {
         var responseDTO = new CartItemResponseDTO();
         responseDTO.setTitle(item.getBook().getTitle());
         responseDTO.setPrice(mapPrice(item.getBook().getPrice().amount(), item.getBook().getPrice().currency().name()));
